auth keys without braces

--- a/twitter4j.properties
+++ b/twitter4j.properties
@@ -1,5 +1,5 @@
 debug=true
-oauth.consumerKey=<rNTv0nlgjndqfqKJPOjL3Oyn6>
-oauth.consumerSecret=<eGjLCK8meC3PSXSX2SWsbU8J2DbczKtN1dBIIT7qJnLijOBigq>
-oauth.accessToken=<1119345674-bWgjQKkEjYFbTTlYgleQsTuzyJjT2YGiyZkkRas>
-oauth.accessTokenSecret=<D2M2IxxeXFCkEZn2aihOHgbxaKWPSGlnboDxw9y5iivr3>
+oauth.consumerKey=rNTv0nlgjndqfqKJPOjL3Oyn6
+oauth.consumerSecret=eGjLCK8meC3PSXSX2SWsbU8J2DbczKtN1dBIIT7qJnLijOBigq
+oauth.accessToken=1119345674-bWgjQKkEjYFbTTlYgleQsTuzyJjT2YGiyZkkRas
+oauth.accessTokenSecret=D2M2IxxeXFCkEZn2aihOHgbxaKWPSGlnboDxw9y5iivr3
